Adding the tests, Unit tests and IT. Changing the API to fit the tests
Changing the API. Fixing some bugs in the generated code. Deleting some functions because YAGNI.
Inserting the ITs and the unit tests agains the API.
